# mars_camera_module

./: .gitignore  CMakeLists.txt  README.md  docker-compose-video-extract.yml  docker-compose.yml
devel/include/libcamera_device/: LibcameraDeviceConfig.h
devel/share/libcamera_device/cmake/: libcamera_deviceConfig.cmake
devel/share/libcamera_device/docs/: LibcameraDeviceConfig-usage.dox  LibcameraDeviceConfig.dox  LibcameraDeviceConfig.wikidoc
dockerfiles/: ros_env.docker
launch/: camera.launch  split_bag.launch
scripts/: catkin_cmake.sh  config_default.yaml  extract_videos.py  requirements.txt  start_camera.py
src/ffmpeg_image_transport/: CMakeLists.txt
src/ffmpeg_image_transport/cfg/: EncoderDyn.cfg
src/ffmpeg_image_transport/cmake/: FindV4L2.cmake  configure_ffmpeg.sh  ffmpeg.cmake
src/ffmpeg_image_transport/include/ffmpeg_image_transport/: ffmpeg_decoder.h  ffmpeg_encoder.h  ffmpeg_publisher.h
src/ffmpeg_image_transport/src/: ffmpeg_decoder.cpp  ffmpeg_encoder.cpp  ffmpeg_publisher.cpp
src/ffmpeg_image_transport_tools/launch/: split_bag_mars.launch
src/libcamera_device/cfg/: LibcameraDevice.cfg
src/libcamera_device/launch/: full_hd_video.launch
src/libcamera_device/src/: camera_messenger.cpp  camera_messenger.hpp  camera_node.cpp
src/libcamera_device/src/core/: CMakeLists.txt  buffer_sync.cpp  completed_request.hpp  dma_heaps.cpp  libcamera_app.cpp  libcamera_app.hpp  logging.hpp  options.cpp  options.hpp  post_processor.cpp  post_processor.hpp  rpicam_app.cpp  rpicam_app.hpp  rpicam_encoder.hpp
src/libcamera_device/src/encoder/: CMakeLists.txt  encoder.hpp  null_encoder.hpp
src/libcamera_device/src/image/: CMakeLists.txt  bmp.cpp  dng.cpp  image.hpp  jpeg.cpp  png.cpp  yuv.cpp
src/libcamera_device/src/post_processing_stages/: CMakeLists.txt  annotate_cv_stage.cpp  face_detect_cv_stage.cpp  hdr_stage.cpp  motion_detect_stage.cpp  negate_stage.cpp  object_detect_draw_cv_stage.cpp  plot_pose_cv_stage.cpp  post_processing_stage.hpp  postproc_lib.cmake  postproc_lib.cpp.in  postproc_lib.h  sobel_cv_stage.cpp  tf_stage.hpp
src/libcamera_device/src/post_processing_stages/hailo/: hailo_classifier.cpp  hailo_postprocessing_stage.hpp  hailo_yolo_inference.cpp  hailo_yolov5_segmentation.cpp  hailo_yolov8_pose.cpp
src/libcamera_device/src/post_processing_stages/imx500/: imx500_object_detection.cpp  imx500_posenet.cpp  imx500_post_processing_stage.hpp
src/libcamera_device/src/preview/: CMakeLists.txt  drm_preview.cpp  egl_preview.cpp  null_preview.cpp  preview.cpp  preview.hpp  qt_preview.cpp
src/mars_camera_hw_manager/: CMakeLists.txt  package.xml  setup.py
src/mars_camera_hw_manager/launch/: manager.launch
src/mars_camera_hw_manager/msg/: CameraControl.msg
src/mars_camera_hw_manager/nodes/: fan_controller  hw_manager  shutdown
src/mars_camera_hw_manager/src/: manager_node.py  shutdown_node.py
src/mars_camera_hw_manager/src/hw_manager/: fan_controller_node.py  manager.py  manager_node.py  shutdown_node.py
